<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MedScheduler</string>
    <string name="action_settings">Settings</string>
    <string name="chk_head">Head</string>
    <string name="chk_body">Body</string>
    <string name="chk_nose">Nose</string>
    <string name="chk_throat">Throat</string>
    <string name="chk_ears">Ears</string>
    <string name="chk_arms">Arms</string>
    <string name="chk_legs">Legs</string>
    <string name="chk_genital">Genital</string>    
    <string name="btn_display">Display</string>    
    <string name="img_home_desc">Welcome</string>
    <string name="btn_continue">Continue</string>
    <string name="txt_password">Password:</string>
    <string name="btn_login">Login:</string>
    <string name="txt_user_name">User Name:</string>
    <string name="txt_register">Don\'t have an account? Please register:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_register">Register</string>
    <string name="txt_symptoms">Please check your symtoms below:</string>
    <string name="txt_first_name">First Name:</string>
    <string name="txt_last_name">Last Name:</string>
    <string name="txt_ssn">SSN:</string>
    <string name="txt_zip">Zip Code:</string>
    <string name="txt_phone">Phone:</string>
    <string name="txt_city">City:</string>
    <string name="txt_role">Role:</string>
    <string name="txt_country">Country:</string>
    <string name="txt_street">Street:</string>
    <string name="txt_state">State:</string>
    <string name="txt_dob">DOB:</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_confirmed">Confirmed</string>
    <string name="btn_closed">Closed</string>
    <string name="btn_open">Open</string>
    <string name="txt_8to9">2014/06/13:08:00</string>
    <string name="txt_10to11">2014/06/14:10:00</string>
    <string name="txt_12to1">2014/06/15:12:00</string>

</resources>
