<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_symptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/txt_symptoms" >
        <requestFocus />
    </TextView>
    
    <CheckBox
        android:id="@+id/chk_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_head" />
    <CheckBox
        android:id="@+id/chk_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_body"/>
    <CheckBox
        android:id="@+id/chk_nose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_nose" />
    <CheckBox
        android:id="@+id/chk_ears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_ears" />
    <CheckBox
        android:id="@+id/chk_throat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_throat" />
    <CheckBox
        android:id="@+id/chk_arms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_throat" />
    <CheckBox
        android:id="@+id/chk_legs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_throat" />
    <CheckBox
        android:id="@+id/chkGenital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_genital" />
    
    <EditText
    android:inputType="textMultiLine" 
    android:lines="8" 
    android:minLines="6" 
    android:gravity="top|left" 
    android:maxLines="10" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent" 
    android:scrollbars="vertical"> 
    </EditText>
 
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit" />
 
</LinearLayout>

