<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:text="@string/txt_8to9" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button8to9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_open" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:ems="10"
        android:text="@string/txt_10to11" />

    <Button
        android:id="@+id/button10to11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_open" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:editable="false"
        android:tag="@string/txt_12to1"
        android:ems="10"
        android:text="@string/txt_12to1" />

    <Button
        android:id="@+id/button12to1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_open" />

</LinearLayout>