<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="372dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText1"
            android:layout_marginTop="40dp"
            android:text="@string/txt_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/login"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_alignRight="@+id/editText2"
            android:layout_below="@+id/editText2"
            android:layout_marginTop="55dp"
            android:text="@string/btn_login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_alignBaseline="@+id/txt_password"
            android:layout_alignBottom="@+id/txt_password"
            android:layout_alignLeft="@+id/editText1"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="46dp"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="none"
            android:gravity="center" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txt_password"
            android:layout_alignTop="@+id/editText1"
            android:text="@string/txt_user_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
       
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/txt_register"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Button
            android:id="@+id/btn_reg_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_alignBaseline="@+id/login"
            android:layout_alignBottom="@+id/login"
            android:layout_alignLeft="@+id/txt_password"
            android:text="@string/btn_cancel"
            android:textSize="20sp" />

    </RelativeLayout>

</ScrollView>